--- a/5월/5월22일.md
+++ b/5월/5월22일.md
@@ -1,6 +1,6 @@
 # 20230522
 
-![Untitled](20230522%20a4d501ccf7544562bd3f991d0f942080/Untitled.png)
+![Untitled](5월22일/Untitled.png)
 
 ![Untitled](20230522%20a4d501ccf7544562bd3f991d0f942080/Untitled%201.png)
 
