Fix image folder&0522.md

--- a/5월/0522.md
+++ b/5월/0522.md
@@ -1,10 +1,10 @@
 # 20230522
 
-![Untitled](5월22일/Untitled.png)
+![Untitled](image/0522/Untitled.png)
 
-![Untitled](5월22일/Untitled%201.png)
+![Untitled](image/0522/Untitled%201.png)
 
-![Untitled](5월22일/Untitled%202.png)
+![Untitled](image/0522/Untitled%202.png)
 
 - valueOf(연산자)를 사용해 return되는 값에 따라 enum에 정의된 PLUS MINUS MULTIPLE DIVIDE를 실행
 - ex) Operator.valueOf(operator) → operator 값이 `“+”` 라면 PLUS 실행
