--- a/5월/0526.md
+++ b/5월/0526.md
@@ -26,4 +26,60 @@ public class Remote ControlExample{
 
 ### 추상 메소드
 
--
+```java
+public interface RemoteControl{
+	int MAX_VOLUME = 10;
+	int MIN_VOLUME = 0;
+
+	//추상 메소드
+	void turnOn();
+	/*public abstract*/ void turnOff(); //  /**/내 생략된 표현
+	void setVolume(int volume);
+}
+```
+
+- 추상메소드는 리턴 타입, 메소드명, 매개변수만 적는다.
+- 따로 적지않더라도 public abstract가 활성화되어있다.
+
+**추상 메소드 재선언**
+
+```java
+public class Television implements RemoteControl{
+	private int volume;
+
+	@Override
+	public void turnOn(){
+		System.out.println("TV를 켭니다");
+	}
+
+	@Override
+	public void turnOff(){
+		System.out.println("TV를 끕니다");
+	}
+
+	public void setVolume(int volume){
+		if(volume > RemoteControl.MAX_VOLUME){
+			this.volume = RemoteControl.MAX_VOLUME;
+		} else if(volume < RemoteControl.MIN_VOLUME){
+			this.volume = RemoteControl.MIN_VOLUME;
+		} else{
+			this.volume = volume;
+		}
+	System.out.println("현재 TV 볼륨: " + this.volume);
+	}
+}
+```
+
+**추상 메소드 이용**
+
+```java
+public static void main(String() args){
+	RemoteControl rc;
+
+	rc = new Television();
+  rc.turnOn();
+	rc.setVolume(5);
+	rc.turnOff();
+
+}
+```
