--- a/5월/0529.md
+++ b/5월/0529.md
@@ -6,9 +6,9 @@
 
 **자동 타입 변환**
 
-![Untitled](20230529%201e4c569b371b4c6eb3e138bd8528aebb/Untitled.png)
+![Untitled](image/0529/Untitled.png)
 
-![Untitled](20230529%201e4c569b371b4c6eb3e138bd8528aebb/Untitled%201.png)
+![Untitled](image/0529/Untitled%201.png)
 
 - 위와 같은 조건에서 자동 타입 변환이 일어난다.
 
@@ -16,7 +16,7 @@
 
 ### 강제 타입 변환
 
-![Untitled](20230529%201e4c569b371b4c6eb3e138bd8528aebb/Untitled%202.png)
+![Untitled](image/0529/Untitled%202.png)
 
 ```java
 //RemoteControl
