--- a/5월/0530.md
+++ b/5월/0530.md
@@ -5,11 +5,11 @@
 - 연산자와 비연산자를 구분하는 CheckNumOperator함수가 효율적이지 않다고 판단된다.
 - 입력받은 내용을 List로 저장하고 list.get()함수를 이용해서 연산자와 비연산자를 쉽게 구별할 수 있다고 생각이 들었다.
 
-![Untitled](20230530%207511455ef04447b3a68df8ac38001b33/Untitled.png)
+![Untitled](image/0530/Untitled.png)
 
 - CheckNumberOperator함수를 수정 후에 개선할 수 있을 것 같디.
 
-![Untitled](20230530%207511455ef04447b3a68df8ac38001b33/Untitled%201.png)
+![Untitled](image/0530/Untitled%201.png)
 
 **일급객체**란 다른 객체들에 일반적으로 적용 가능한 연산을 모두 지원하는 객체를 가리킨다.
 
@@ -25,7 +25,7 @@
 
 - 코드 작성 중 (추가 필요)
 
-![Untitled](20230530%207511455ef04447b3a68df8ac38001b33/Untitled%202.png)
+![Untitled](image/0530/Untitled%202.png)
 
 - regex = 정규 표현식
 - 첫 코드를 작성했을 당시에 가지고 있는 정보만 이용해서 코드를 작성하려했기에 정규표현식은 가능하면 안써보려고 했다.
@@ -39,7 +39,7 @@ protected boolean isOperator(String str) {
 
 - isNum 또한 정규표현식으로 구현하면 간단할것같다.
 
-![Untitled](20230530%207511455ef04447b3a68df8ac38001b33/Untitled%203.png)
+![Untitled](image/0530/Untitled%203.png)
 
 - CheckNumOperator에서 IsNum함수는 잦게 사용되므로 List를 이용해 연산자 비연산자를 구별하는 함수를 생성했을때 수정하는 것이 나을 것 같다.
 
@@ -55,6 +55,6 @@ protected boolean isNum(String str) {
     }
 ```
 
-![Untitled](20230530%207511455ef04447b3a68df8ac38001b33/Untitled%204.png)
+![Untitled](image/0530/Untitled%204.png)
 
 추후에….
