--- a/6월/0601.md
+++ b/6월/0601.md
@@ -1,1 +1,63 @@
 
+# 20230601
+
+### 다형성
+
+- Ex) “**자동차**”의 부품인 **타이어**(인터페이스) 에 적용되는 **한국 타이어**(객체)와 **금호 타이어**(객체)
+    - **한국 타이어**와 **금호 타이어**를 사용할 수 있으며 각 타이어마다 의 **성능**(리턴값)은 다르다.
+
+```java
+public class Car{
+	Tire tire1 = new HankookTire();
+	Tire tire2 = new KumhoTire();
+}
+```
+
+```java
+Car myCar = new Car();
+myCar.tire1 = new KumhoTire();
+```
+
+- `Car` 객체를 생성한 후 다른 구현 객체를 대입할 수도 있다. (타이어 교체)
+
+---
+
+### 매개변수의 다형성
+
+```java
+public interface Vehicle{
+	void run();
+}
+
+public class Driver{
+	void drive(Vehicle vehicle){
+		vehicle.run();
+	}
+}
+//Ex)
+driver.drive(bus);
+driver.drive(taxi);
+```
+
+- `drive(vehicle)`안에 어떤 값을 주냐에 따라 다른 리턴값을 가진다.
+    - 각 객체별로 재정의된 `run()` 메소드의 실행 내용이 다르기 때문! ← 매개변수의 다형성
+
+---
+
+### 객체 타입 확인
+
+```java
+if( vehicle instanceof Bus){
+	//vehicle에 대입된 객체가 Bus일 경우 실행
+}
+```
+
+- 매개값이 특정 구현 객체일 경우 강제 타입 변환을 하고 싶을 때 `instanceof`연산자를 사용해서 매개값의 타입을 검사해야 한다.
+
+```java
+public void method( Vehicle vehicle) {
+	if(vehicle instanceof Bus){
+		Bus bus = (Bus) vehicle;
+	}
+}
+```
