--- a/5월/0527.md
+++ b/5월/0527.md
@@ -37,11 +37,12 @@ public static void main(String[] args){
 - 현재 `setMute(false)`메소드는 무음 해제 처리가 제대로 되지 않는 메소드이다.
 - `setMute()`메소드의 기능을 재정의 할 수 있다.
 
+- 재정의 시 public을 사용하고 default는 생략해야 한다.
 ```java
 private int memoryVolume; // 추가 필드 선언
 
 @Override
-default void setMute(boolean mute){
+public void setMute(boolean mute){
 		if(mute){
 			this.memoryVolume = this.volume;
 			System.out.println("무음 처리합니다.");
