--- a/6월/0601.md
+++ b/6월/0601.md
@@ -61,3 +61,21 @@ public void method( Vehicle vehicle) {
 	}
 }
 ```
+---
+### 봉인된 인터페이스 (sealed)
+
+- **부분별한 자식 인터페이스 생성** 을 방지하기 위해 인터페이스를 **봉인**한다.
+
+```java
+public sealed interface InterfaceA **permits** InterfaceB { ... }
+```
+
+- sealed 키워드를 interface 앞에 사용하며, permits 키워드로 자식 인터페이스를 지정한다.
+    - 지정된 자식 인터페이스 외에는 사용 불가
+
+```java
+//InterfaceB 생성
+public non-sealed interface InterfaceB extends InterfaceA { ... }
+//non-sealed 사용 시 InterfaceB는 다른 자식 인터페이스를 생성 가능
+public interface InterfaceC extends InterfaceB { ... }
+```
