--- a/6월/0602.md
+++ b/6월/0602.md
@@ -99,8 +99,7 @@ public class MySqlDao implements DataAccessObject{
 		System.out.println("MySql DB에서 삭제");
 	}
 ```
-
-![Untitled](image/0602%207.png)
+![Untitled](image/0602/Untitled%207.png)
 
 ```java
 if( a instanceof C )
