--- a/6월/0617.md
+++ b/6월/0617.md
@@ -12,14 +12,14 @@
 | 정적 멤버 클래스 | 바깥 클래스의 정적 필드와 정적 메소드 |
 
 ```java
-**public class A**{
+public class A {
 	int field1;
 	void method1(){...}
 
 	static int field2;
 	static void method2(){...}
 
-	**class B**{ //모든 필드와 메소드 **사용 가능**
+	class B{ //모든 필드와 메소드 사용 가능
 		void method() {
 		field1 = 10;
 		method1();
@@ -29,12 +29,12 @@
 		}
 	}
 
-	**static class C** {
+	static class C {
 		void method() {
-		//정적 필드와 정적 메소드가 아니기 때문에 **사용 불가능**
+		//정적 필드와 정적 메소드가 아니기 때문에 사용 불가능
 		//field1 = 10;
 		//method1();
-		//정적 필드와 정적 메소드이기에 **사용 가능**
+		//정적 필드와 정적 메소드이기에 사용 가능
 		field 2 = 10;
 		method2();
 		}
@@ -63,9 +63,9 @@ class B {
 
 	void print() {
 		System.out.println(this.field);//B의 field
-		**this.method();**                 //B의 method
+		this.method();                 //B의 method
 		System.out.println(A.this.field);//A의 field
-		**A.this.method();**                 //A의 method
+		A.this.method();                 //A의 method
 	}
 }
 
