--- a/6월/0626.md
+++ b/6월/0626.md
@@ -31,4 +31,10 @@ inputOperator.add(tokens[i]);
 
 - 초기화를 하지 않아 생긴 문제가 맞았다…
 
-### 추가 예정
+### 구현 소개
+
+1. `GetInputValue`클래스에서 `String`으로 `inputValue`값을 얻어옴.
+2. `CheckNumOperator`클래스에서 **짝수 홀수** `index`에 각각 비연산자, 연산자가 고정적임을 이용.
+    - `split()`메소드를 이용해 `tokens`로 분리하여 `ArrayList`에 저장.
+3. `CheckNumOperator`클래스 내 `ArrayList`에 저장된 (비)연산자를 `Calculator`클래스에서 계산.
+4. `Calculator`클래스 내 `calcResult` 값을 출력.
