--- a/7월/0701.md
+++ b/7월/0701.md
@@ -1,4 +1,4 @@
-![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ae2e4d37-19ed-4778-a6fe-0687894ac328/Untitled.png)
+![Untitled](image/0701/Untitled.png)
 
 Review 4. 
 
