--- a/7월/0707.md
+++ b/7월/0707.md
@@ -4,7 +4,7 @@
 추가한 사람: 창주 박
 태그: 7월
 
-![Untitled](0707%20e233067e0bf54bcbb40c62585de2bf10/Untitled.png)
+![Untitled](image/0707/Untitled.png)
 
 - `final`키워드는 쉽게 말해 ReadOnly의 느낌!
     
@@ -23,7 +23,7 @@
 
 ---
 
-![Untitled](0707%20e233067e0bf54bcbb40c62585de2bf10/Untitled%201.png)
+![Untitled](image/0707/Untitled%201.png)
 
 - for문은 `checkStrike`, `checkBall`을 **3회** 실행하기 위한 코드.
 
