--- a/7월/0727.md
+++ b/7월/0727.md
@@ -9,11 +9,9 @@
 - [x]  명령어 입력시 대답.
 - [x]  `!썬데이` 적용
 - [x]  자동으로 링크를 업데이트 하도록 설정(현재는 수동으로 직접 업데이트중)
-- [x]  png를 따와서 사진을 보내주기(가능할지 의문)~~(가능했고,,)~~
-
-        ![Untitled](image/0727/Untitled.png)
-        
-        ![Untitled](image/0727/Untitled%201.png)
+- [x]  png를 따와서 사진을 보내주기(가능할지 의문)~~(가능했고,,)~~<br>
+![Untitled](image/0727/Untitled.png)
+![Untitled](image/0727/Untitled%201.png)
         
 - [ ]  24시간 작동 가능하도록 변경
     - `GoogleCloud`이용해서 VM 시도중
