update : 연관 vs 의존 관계

--- a/University/시스템분석및설계/4장 구조 다이어그램.md
+++ b/University/시스템분석및설계/4장 구조 다이어그램.md
@@ -106,16 +106,99 @@ void main(){
 
 ![Untitled](image/4장//Untitled%203.png)
 
+연관 관계의 특별한 형태
+’전체와 부분(whole-part)’,  ‘포함하다(contains)`, ‘구성하다(consists-of)’, ‘부분이다(part-of)’
+
 <br>
 
 4. 복합 (composition)
 
 ![Untitled](image/4장//Untitled%204.png)
 
+연관 관계의 특별한 형태
+집합 관계와 동일한 해석
+
+<br>
+
 5. 실현 (realization)
 
 ![Untitled](image/4장/Untitled%205.png)
 
+특정 클래스의 명세를 구현하는 관계
+
+<br>
+
 6. 의존 (dependency)
 
 ![Untitled](image/4장/Untitled%206.png)
+
+특정 클래스의 명세나 구현의 변화가 다른 클래스에 영향을 미치는 관계
+‘이용하다(use)’
+
+<br>
+
+### 연관관계 표기법
+
+### 연관관계 - 자바코드
+
+`선수` - `팀`
+```java
+class Player{
+	Team t;
+}
+class Team{
+	Player p;
+}
+```
+
+![Untitled](image/4장/Untitled%207.png)
+
+```java
+class Player {
+	Team employer;
+}
+class Team
+
+}
+```
+
+![Untitled](image/4장/Untitled%208.png)
+
+```java
+class Player {
+	Team employer;
+}
+class Team {
+	Collection<Player> employee;
+}
+```
+
+### 의존 관계 vs 연관 관계
+
+```java
+//의존
+class A {
+	void opA(B b){
+		b.opB();
+	}
+}
+
+class B {
+	void opB();
+}
+
+//연관
+class A{
+B b = new B();
+	void opA() {
+		b.opB();
+	}
+}
+
+class B {
+	void opB();
+}
+```
+
+- 연관 관계 - **지속적인** 관계, 클래스 구조에 영향O
+- 의존 관계 - **일시적인** 관계, 클래스 구조에 영향X
