update : 4장 구조 다이어그램.md

--- a/University/시스템분석및설계/4장 구조 다이어그램.md
+++ b/University/시스템분석및설계/4장 구조 다이어그램.md
@@ -202,3 +202,97 @@ class B {
 
 - 연관 관계 - **지속적인** 관계, 클래스 구조에 영향O
 - 의존 관계 - **일시적인** 관계, 클래스 구조에 영향X
+
+### 추상 클래스 {abstract} or <<abstract>>
+
+| 차량 |
+| --- |
+|  |
+| 운전하기()
+주차하기() |
+
+
+| 차량 {abstract} |
+| --- |
+|  |
+| 운전하기() {abstract}
+주차하기() |
+
+### 추상, 복합, 일반화 관계 보기
+
+> 그림 보고 해석 및 코드 작성 (시험 출제 농후)
+> 
+
+![Untitled](image/4장/Untitled%209.png)
+
+```java
+/* 해석
+*
+*
+*
+*/
+//코드
+
+```
+
+### 제한 연관
+
+> 속성(제한자)을 통해 연관 객체 집합에서 **단 하나의 객체**를 선택하도록 제한하는 연관
+> 
+
+
+❓ **제한자** : 연관 객체 집합을 명확히 구분하는 속성
+
+
+![Untitled](image/4장/Untitled%2010.png)
+
+```java
+class Bank {
+	Vector<Account> acc;
+}
+class Account{
+}
+```
+
+![Untitled](image/4장/Untitled%2011.png)
+
+```java
+class Bank {
+	HashMap<Integer, Account> acc;
+}
+class Account {
+	Integer accNum;
+}
+
+```
+
+### 자바 Collection 프레임워크
+
+- List<E> - 순서 O 중복 O
+- Set<E> - 순서 X 중복 X
+- Map<Key, Value> - 두 개의 값을 하나의 `index` 에 저장 가능
+
+### 템플릿 클래스
+
+> = 제너릭 클래스, 매개변수 클래스
+> 
+
+![Untitled](image/4장/Untitled%2012.png)
+
+```java
+class MyClass<T> {
+	private T data = null;
+	public void setData(T data) { this.data = data;}
+	public T getData() { return data;}
+}
+class MyClassTest {
+	public static void main(String args[]) {
+		MyClass<String> s1 = new MyClass<String>();
+		s1.setDate(new String("Hello"));
+		String s2 = s1.getDate();
+	}
+}
+
+```
+
+- MyClass에 들어갈 매개변수 자료형을 T(Type)으로 설정해두고, 해당 클래스를 사용할 때 String으로 세부 지정하여 사용.
